# ecommerce-piko_backend-

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_upload.py
src/: crud.py  product.py  temp
src/category/: auto_category.py
src/db_core/: db.py  model.py  setting.py
src/embedingsllm/: llm.py
src/image_uplod/: image_upload.py
src/search/: embeddings.py  groq_llm.py  search.py
